--- a/index.ejs
+++ b/index.ejs
@@ -1,1 +1,7 @@
-<h1>Hello, world!</h1> 
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1>hello world!</h1>
+    </div>
+  </div>
+</div>
